contact page update

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <link rel="stylesheet" href="css/style.css">
      <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css
 " rel="stylesheet">
+     <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -49,7 +50,7 @@
                          </li>
                          <li class="nav_item">
                               <i class="fa fa-phone"></i>
-                              <a href="#" class="nav_link">Contact</a>
+                              <a href="contact.html" class="nav_link">Contact</a>
                          </li>
                          <li class="nav_item">
                               <i class="fa fa-file"></i>
@@ -82,6 +83,7 @@
                               <li><a href="#">Home</a></li>
                               <li><a href="#">Services</a></li>
                               <li><a href="#">Contact</a></li>
+                              <li><a href="#">Omega services agreement</a></li>
                          </ul>
                     </div>
                     <div class="social_media">
