project update services-page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+     
      <div class="container">
           <header>
                <video class="video-container" autoplay muted loop>
@@ -46,7 +47,7 @@
                          </li>
                          <li class="nav_item">
                               <i class="fa fa-server"></i>
-                              <a href="#" class="nav_link">Services</a>
+                              <a href="services.html" class="nav_link">Services</a>
                          </li>
                          <li class="nav_item">
                               <i class="fa fa-phone"></i>
@@ -54,7 +55,7 @@
                          </li>
                          <li class="nav_item">
                               <i class="fa fa-file"></i>
-                              <a href="#" class="nav_link">Omega services agreement</a>
+                              <a href="omega-agreement.html" class="nav_link">Omega services agreement</a>
                          </li>
                     </ul>
                     <button class="open-menu btn">
