--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,7 @@
      <link rel="stylesheet" href="css/contact.css">
      <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css
 " rel="stylesheet">
-     <link rel="st                    </div>
-     ylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -44,7 +43,7 @@
                </li>
                <li class="nav_item">
                     <i class="fa fa-server"></i>
-                    <a href="#" class="nav_link">Services</a>
+                    <a href="services.html" class="nav_link">Services</a>
                </li>
                <li class="nav_item">
                     <i class="fa fa-phone"></i>
@@ -52,7 +51,7 @@
                </li>
                <li class="nav_item">
                     <i class="fa fa-file"></i>
-                    <a href="#" class="nav_link">Omega services agreement</a>
+                    <a href="omega-agreement.html" class="nav_link">Omega services agreement</a>
                </li>
           </ul>
           <button class="open-menu btn">
@@ -85,7 +84,7 @@
                </form>
           </div>
           <div class="map_container">
-               <iframe src="https://www.youtube.com" frameborder="0"></iframe>
+               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.1343215356073!2d10.141289375409102!3d5.976234729280093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x105f3d8a4a5b5061%3A0x72c7df9e4079dbaa!2sBitsvalley!5e0!3m2!1sen!2scm!4v1690982330593!5m2!1sen!2scm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
      </main>
      <footer>
