--- a/omega-agreement.html
+++ b/omega-agreement.html
@@ -45,7 +45,7 @@
             </li>
             <li class="nav_item">
                 <i class="fa fa-server"></i>
-                <a href="#" class="nav_link">Services</a>
+                <a href="services.html" class="nav_link">Services</a>
             </li>
             <li class="nav_item">
                 <i class="fa fa-phone"></i>
