--- a/services.html
+++ b/services.html
@@ -204,10 +204,10 @@
          <div class="footer_links">
             <h3>Useful links</h3>
             <ul>
-               <li><a href="#">Home</a></li>
+               <li><a href="index.html">Home</a></li>
                <li><a href="#">Services</a></li>
-               <li><a href="#">Contact</a></li>
-               <li><a href="#">Omega services agreement</a></li>
+               <li><a href="contact.html">Contact</a></li>
+               <li><a href="omega-agreement.html">Omega services agreement</a></li>
             </ul>
          </div>
          <div class="social_media">
