--- a/contact.html
+++ b/contact.html
@@ -92,10 +92,10 @@
                <div class="footer_links">
                     <h3>Useful links</h3>
                     <ul>
-                         <li><a href="#">Home</a></li>
-                         <li><a href="#">Services</a></li>
+                         <li><a href="index.html">Home</a></li>
+                         <li><a href="services.html">Services</a></li>
                          <li><a href="#">Contact</a></li>
-                         <li><a href="#">Omega services agreement</a></li>
+                         <li><a href="omega-agreement.html">Omega services agreement</a></li>
                     </ul>
                </div>
                <div class="social_media">
