--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                          <h3>Useful links</h3>
                          <ul>
                               <li><a href="#">Home</a></li>
-                              <li><a href="#">Services</a></li>
-                              <li><a href="#">Contact</a></li>
-                              <li><a href="#">Omega services agreement</a></li>
+                              <li><a href="services.html">Services</a></li>
+                              <li><a href="contact.html">Contact</a></li>
+                              <li><a href="omega-agreement.html">Omega services agreement</a></li>
                          </ul>
                     </div>
                     <div class="social_media">
