--- a/contact.html
+++ b/contact.html
@@ -59,32 +59,34 @@
           </button>
      </nav>
      <main>
-          <div class="form_container">
-               <h2>Contact Us</h2>
-               <form action="">
-                    <div class="name-email-form">
-                         <div class="input-field">
-                              <label for="name">Full Name</label>
-                              <input type="text" id="name" placeholder="Name">
+          <div class="container">
+               <div class="form_container">
+                    <h2>Contact Us</h2>
+                    <form action="">
+                         <div class="name-email-form">
+                              <div class="input-field">
+                                   <label for="name">Full Name</label>
+                                   <input type="text" id="name" placeholder="Name">
+                              </div>
+                              <div class="input-field">
+                                   <label for="email">Email Address</label>
+                                   <input type="text" id="email" placeholder="Email">
+                              </div>
                          </div>
                          <div class="input-field">
-                              <label for="email">Email Address</label>
-                              <input type="text" id="email" placeholder="Email">
+                              <label for="subject">Subject</label>
+                              <input type="text" id="subject" placeholder="Subject">
                          </div>
-                    </div>
-                    <div class="input-field">
-                         <label for="subject">Subject</label>
-                         <input type="text" id="subject" placeholder="Subject">
-                    </div>
-                    <div class="input-field">
-                         <label for="message" >Message</label>
-                         <textarea  id="message" cols="30" rows="9" placeholder="Message"></textarea>
-                    </div>
-                    <input type="submit" value="Send Message">
-               </form>
-          </div>
-          <div class="map_container">
-               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.1343215356073!2d10.141289375409102!3d5.976234729280093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x105f3d8a4a5b5061%3A0x72c7df9e4079dbaa!2sBitsvalley!5e0!3m2!1sen!2scm!4v1690982330593!5m2!1sen!2scm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                         <div class="input-field">
+                              <label for="message" >Message</label>
+                              <textarea  id="message" cols="30" rows="9" placeholder="Message"></textarea>
+                         </div>
+                         <input type="submit" value="Send Message">
+                    </form>
+               </div>
+               <div class="map_container">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.1343215356073!2d10.141289375409102!3d5.976234729280093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x105f3d8a4a5b5061%3A0x72c7df9e4079dbaa!2sBitsvalley!5e0!3m2!1sen!2scm!4v1690982330593!5m2!1sen!2scm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+               </div>
           </div>
      </main>
      <footer>
