--- a/services.html
+++ b/services.html
@@ -193,6 +193,7 @@
                         <label for="message">Messge</label>
                         <textarea name="" id="message" cols="30" rows="6" wrap="off"></textarea>
                       </div>
+                      <input type="submit" value="Send Request">
                  </form>
             </div>
        </div>
