--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
      
      <div class="container">
           <header>
-               <video class="video-container" autoplay muted loop>
-                    <source src="images/course-video.mp4" type="video/mp4" />
-               </video>
+               
                <nav class="navbar">
                     <div class="logo">
                          <i class="fa fa-star"></i>
@@ -62,7 +60,7 @@
                          <i class="fa fa-bars fa-2x"></i>
                     </button>
                </nav>
-               <div class="banner">
+               <!-- <div class="banner">
                     <h2>Omega Service Inc</h2>
                     <p>Omega Cleaning Services in Tennessee is much more than simply dusting a few desks and sweeping
                          the floor. The greatest advantage of engaging a commercial janitorial service is to ensure a
@@ -74,7 +72,7 @@
                          <i class="fa fa-angle-double-right"></i>
                          <a href="services.html">Services</a>
                     </div>
-               </div>
+               </div> -->
           </header>
           <footer>
                <div class="footer1">
