--- a/index.html
+++ b/index.html
@@ -73,6 +73,52 @@
                          <a href="services.html">Services</a>
                     </div>
                </div> -->
+               <div class="slideshow_container">
+                    <div class="slide_show">
+                         <h2>Omega Services Inc</h2>
+                         <p>Omega Cleaning Services in Tennessee is much more than simply dusting a few desks and sweepingthe floor.</p>
+                         <div class="link">
+                              <i class="fa fa-home"></i>
+                              <a href="#">Home</a>
+                              <i class="fa fa-angle-double-right"></i>
+                              <a href="services.html">Services</a>
+                         </div>
+                         <img src="images/2.jpg" alt="" class="fade">
+                    </div>
+                    <div class="slide_show">
+                         <h2>Carpet cleaning</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eaque nulla porro fuga. Quo corrupti harum accusamus natus suscipit ea inventore voluptatibus voluptatum beatae?</p>
+                         <div class="link">
+                              <i class="fa fa-home"></i>
+                              <a href="#">Home</a>
+                              <i class="fa fa-angle-double-right"></i>
+                              <a href="services.html">Services</a>
+                         </div>
+                         <img src="images/3.jpg" alt="" class="fade">
+                    </div>
+                    <div class="slide_show">
+                         <h2>Home cleaning</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eaque nulla porro fuga. Quo corrupti harum accusamus natus suscipit ea inventore voluptatibus voluptatum beatae?</p>
+                         <div class="link">
+                              <i class="fa fa-home"></i>
+                              <a href="#">Home</a>
+                              <i class="fa fa-angle-double-right"></i>
+                              <a href="services.html">Services</a>
+                         </div>
+                         <img src="images/OIP.jpg" alt="" class="fade">
+                    </div>
+                    <div class="slide_show">
+                         <h2>Industrial Cleaning</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eaque nulla porro fuga. Quo corrupti harum accusamus natus suscipit ea inventore voluptatibus voluptatum beatae?</p>
+                         <div class="link">
+                              <i class="fa fa-home"></i>
+                              <a href="#">Home</a>
+                              <i class="fa fa-angle-double-right"></i>
+                              <a href="services.html">Services</a>
+                         </div>
+                         <img src="images/ww.jpg" alt="" class="fade">
+                    </div>
+               </div>
           </header>
           <footer>
                <div class="footer1">
