--- a/omega-agreement.html
+++ b/omega-agreement.html
@@ -91,7 +91,7 @@
         </form>
         <div class="button-box">
             <button>
-                <a href="sample.pdf">Download pdf</a>
+                <a href="cec220.pdf">Download pdf</a>
                 <i class="fa fa-arrow-down"></i>
             </button>
         </div>
