services page update

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 </head>
 
 <body>
-     
      <div class="container">
           <header>
                
-               <nav class="navbar">
+               <nav class="navbar" id="top">
                     <div class="logo">
                          <i class="fa fa-star"></i>
                          <span class="logo_text">
@@ -168,7 +167,11 @@
                </div>
           </footer>
      </div>
+     <a href="#top" class="top-btn">
+          <i class="fa fa-arrow-up"></i>
+     </a>
      <script src="js/index.js"></script>
+     <script src="js/slideshow.js"></script>
 </body>
 
 </html>
