--- a/omega-agreement.html
+++ b/omega-agreement.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav class="navbar">
+    <nav class="navbar" id="top">
         <div class="logo">
             <i class="fa fa-star"></i>
             <span class="logo_text">
@@ -143,6 +143,9 @@
             all rights reserved
         </div>
     </footer>
+    <a href="#top" class="top-btn">
+        <i class="fa fa-arrow-up"></i>
+    </a>
     <script src="js/index.js"></script>
 </body>
 
