--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-   <nav class="navbar">
+   <nav class="navbar" id="top">
       <div class="logo">
          <i class="fa fa-star"></i>
          <span class="logo_text">
@@ -96,7 +96,8 @@
          <div class="service odd">
             <div class="box text">
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At harum iusto dolores cumque porro amet
-                  consectetur soluta itaque, modi animi earum, cum dolor sit amet consectetur adipisicing elit. Perferendis quibusdam odio soluta architecto ea
+                  consectetur soluta itaque, modi animi earum, cum dolor sit amet consectetur adipisicing elit.
+                  Perferendis quibusdam odio soluta architecto ea
                   accusamus sint sapiente? In, doloribus sunt. Ipsa dolore ad quam eos dignissimos iure voluptas rerum
                   mollitia necessitatibus consequatur quisquam explicabo pariatur nesciunt, quos consectetur repellat
                   culpa. Dolorem iste vitae provident, fugiat assumenda esse labore earum expedita et ratione quo non
@@ -263,6 +264,9 @@
          all rights reserved
       </div>
    </footer>
+   <a href="#top" class="top-btn">
+      <i class="fa fa-arrow-up"></i>
+   </a>
    <script src="js/index.js"></script>
    <script src="js/services.js"></script>
 </body>
