--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-     <nav class="navbar">
+     <nav class="navbar" id="top">
           <div class="logo">
                <i class="fa fa-star"></i>
                <span class="logo_text">
@@ -90,8 +90,9 @@
                          <div id="loader">
 
                          </div>
-                         <div id="error"></div>
+                         
                     </div>
+                    <div id="error"></div>
                </div>
           </div>
      </main>
@@ -142,6 +143,9 @@
                all rights reserved
           </div>
      </footer>
+     <a href="#top" class="top-btn">
+          <i class="fa fa-arrow-up"></i>
+     </a>
      <script src="js/index.js"></script>
      <script src="js/contact.js"></script>
 </body>
